# Inventory-Managment-system-

./: CMakeLists.txt  README.md  admin_page.cpp  admin_page.h  admin_page.ui  backend_classes.cpp  backend_classes.h  checkout_page.cpp  checkout_page.h  checkout_page.ui  database_manager.cpp  database_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingspage.cpp  settingspage.h  settingspage.ui  user_page.cpp  user_page.h  user_page.ui
